--- a/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
@@ -35,4 +35,4 @@ VSP uses Font Awesome as a dependency, which uses the `<i>` tag for adding icons
 
 ## Actions to take
 
-If a manual review is triggered, VSP will review the PR and will notify you of any issues that need to resolved. You are responsible for resolving any errors. 
+If a manual review is triggered, VSP will review the PR and will notify you of any issues that need to be resolved. You are responsible for resolving any errors. 
