--- a/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
@@ -179,7 +179,7 @@ You can enable or disable features in the Flipper UI:
 |Staging|https://staging-api.va.gov/flipper/features|
 |Production|https://api.va.gov/flipper/features|
 
-2. To access the Flipper UI, you must sign in using an [identity-verified id.me user](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/products/identity-personalization/va.gov-login-process.md) that is listed in [settings.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/settings.yml):
+2. To access the Flipper UI, you must sign in using an [identity-verified id.me user](https://github.com/department-of-veterans-affairs/va.gov-team/blob/8aea537321946b790f2c1ac66c8895a94876ba7b/products/identity-personalization/va.gov-login-process.md#how-do-i-verify-my-identity) (also known as "identity proofed") that is listed in [settings.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/settings.yml):
 
 ```
 flipper:
