--- a/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
@@ -17,9 +17,9 @@ The content build process for this is controlled by a tool called [Metalsmith](h
 
 ## Javascript applications
 
-Javascript applications are the other type of functionality in vets-website. These applications are written in [React](https://reactjs.org/) and [Redux](https://redux.js.org/) and live in `src/applications/` in `vets-website`. For each app you'll find a `manifest.json` file that contains application information. You'll find the root url of the application, which you can use to navigate to that application on the site. These applications also usually have client-side routes, so opening that root url may allow you to click to other pages that are fully client-side.
+Javascript applications are the other type of functionality in vets-website. These applications are written in [React](https://reactjs.org/) and [Redux](https://redux.js.org/), and live in `src/applications/` in `vets-website`. For each app, you'll find a `manifest.json` file that contains application information. You'll find the root url of the application, which you can use to navigate to that application on the site. These applications also usually have client-side routes, so opening that root url may allow you to click to other pages that are fully client-side.
 
-If you're a developer, most of your time will likely be spent working on a React application. We use React because it's widely used by front end developers and provides a good balance of performance and approachability. We also use Redux to manage application state, also because it's commonly used with React and fits most of the applications on VA.gov well. We use [React Router](https://reacttraining.com/react-router/) for client-side routing and [Webpack](https://webpack.js.org/) as a build tool, both of which are the *de facto* standards in the Javascript world. For styles we use [Sass](https://sass-lang.com/) and for dependency management we use [Yarn](https://yarnpkg.com/en/).
+If you're a developer, most of your time will likely be spent working on a React application. We use React because it's widely used by front end developers and provides a good balance of performance and approachability. We also use Redux to manage application state, also because it's commonly used with React and fits most of the applications on VA.gov well. We use [React Router](https://reacttraining.com/react-router/) for client-side routing and [Webpack](https://webpack.js.org/) as a build tool, both of which are the *de facto* standards in the Javascript world. For styles we use [Sass](https://sass-lang.com/), and for dependency management we use [Yarn](https://yarnpkg.com/en/).
 
 ## Design system
 
