Add registry.json to new-application

--- a/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
@@ -30,6 +30,20 @@ Here are the steps for manually setting up a new application. We're going to wal
   // The Webpack bundle name for your app. Must be unique.
   "entryName": "my-new-application",
   // The root url where your application lives
+  // This one is only used by webpack-dev-server for local development
+  "rootUrl": "/my-new-application",
+}
+```
+
+3. Add an entry to `src/applications/registry.json`. This file contains information that the content build needs to create the landing page for your application:
+
+```js
+{
+  // Name of your application, not Veteran facing
+  "appName": "My new application",
+  // The Webpack bundle name for your app. Must be unique.
+  "entryName": "my-new-application",
+  // The root url where your application lives
   "rootUrl": "/my-new-application",
   // Properties specific to rendering your application's HTML landing page
   "template": {
@@ -46,8 +60,9 @@ Here are the steps for manually setting up a new application. We're going to wal
   }
 }
 ```
+   
 
-3. Create the file you referenced in the `entryFile` property above:
+4. Create the file you referenced in the `entryFile` property above:
 
 ```jsx
 import 'platform/polyfills';
@@ -69,7 +84,7 @@ startApp({
 
 This file uses our `startApp` helper to create a React/Redux app that has client-side routes handled with `react-router`. You can leave out the routes or reducer if you don't need Redux or `react-router`. There's also a reference to a Sass file, which will set up the styles for your application.
 
-4. Create Sass file (`src/applications/my-new-application/sass/my-new-application.sass`):
+5. Create Sass file (`src/applications/my-new-application/sass/my-new-application.sass`):
 
 ```scss
 @import "~@department-of-veterans-affairs/formation/sass/shared-variables";
@@ -77,7 +92,7 @@ This file uses our `startApp` helper to create a React/Redux app that has client
 // Your custom sass
 ```
 
-5. Create reducer (`src/applications/my-new-application/reducers/index.js`):
+6. Create reducer (`src/applications/my-new-application/reducers/index.js`):
 
 ```js
 
@@ -101,7 +116,7 @@ export default {
 
 This is a normal Redux reducer, and can be broken up into different state slices as needed. The only thing to note is that it needs to return an object, not a function. This object will get merged with other state data and then turned into a function using Redux's `combineReducers` function.
 
-6. Create routes file (`src/applications/my-new-application/routes.jsx`):
+7. Create routes file (`src/applications/my-new-application/routes.jsx`):
 
 ```jsx
 import React from 'react';
