--- a/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
@@ -66,9 +66,9 @@ const FEATURE_FLAG_NAMES = Object.freeze({
 
 7. Submit a PR for each feature. Crosslinking the PRs in a comment will make it easier for the reviewers to check.
 
-8. Use the selector helper to build a selector for your feature toggle.
+8. Use the selector helper to build a [selector](https://daveceddia.com/redux-selectors/) for your feature toggle. See an example [here](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/applications/gi/containers/ProfilePage.jsx#L118).
 
-   **Note:** In the following example, the `toggleValues` object is a flat list of `toggleName` and boolean key value pairs.
+   **Note:** In the following example, the `toggleValues` object is a flat list of `toggleName` and boolean key value pairs. Also, note that `toggleValues` is imported from 'platform/site-wide/feature-toggles/selectors' and FEATURE_FLAG_NAMES is imported from 'platform/utilities/feature-toggles/featureFlagNames'.
 
 ```js
 // import the toggleValues helper
