--- a/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/manual-reviews.mdx
@@ -1,15 +1,17 @@
 ---
-title: Manual reviews
+title: Automated code quality
 tags: vagovprod, vagovstaging, vagovdev
 ---
 
-# Manual reviews
+# Automated code quality
 
-Each pull request (PR) on `vets-website` runs through an automated process looking for code additions and modifications that don't meet code quality standards. If a potential issue is found, a bot will leave an automated comment and request a review from the **frontend-review-group** (see below).
+Each pull request (PR) on `vets-website` runs through an automated process that looks for code additions and modifications that don't meet code quality standards. If no issues are found, the code does not need to be reviewed by a VSP engineer. If a potential issue is found, a bot will leave an automated comment and request a manual review from the **frontend-review-group**.
 
    ![Screen Shot](https://images.zenhubusercontent.com/5e387fa505ac7e30c820a2da/a09c4c8c-ae32-4142-8fa5-0fc81b6a1892)
 
-The following items will trigger a manual review:
+## Manual reviews
+
+The following items trigger a manual review:
 
 - A call to `Sentry`
 - ESLint being disabled
@@ -29,10 +31,10 @@ VSP enforces [ESLint rules](https://github.com/department-of-veterans-affairs/va
 
 When ESLint rules are disabled, VSP will review each case individually. 
 
-### Adding icons
+### Icons
 
 VSP uses Font Awesome as a dependency, which uses the `<i>` tag for adding icons. Sometimes an icon is used as decoration, but other times it is used to convey meaning to the user. VSP reviews the code to ensure that whenever an icon is being used to convey meaning, the meaning is also conveyed to a screen reader.
 
 ## Actions to take
 
-If a manual review is triggered, VSP will review the PR and will notify you of any issues that need to be resolved. You are responsible for resolving any errors. 
+If a manual review is triggered, you can use the error information provided in the comment to identify the problem and resolve any errors. A member of the VSP team will review the PR and notify you of any issues that need to be resolved. 
