--- a/packages/documentation/src/pages/forms/available-widgets.mdx
+++ b/packages/documentation/src/pages/forms/available-widgets.mdx
@@ -8,7 +8,7 @@ Widgets are React components that return specific form elements. Set these widge
 
 Some widgets are associated with particular schema types or formats. There are additional widgets available, but VAFS uses definitions they're included in, rather than just the field.
 
-Widgets from the [react-jsonschema-form library](./about-the-schema-and-uischema-objects.md#understanding-the-uischema-object) include string mappings. Widgets created specifically for VAFS do not have mappings, and therefore must be specified by passing the component for the widget directly to the config. To include such widgets, import the widget at the top of the file:
+Widgets from the [react-jsonschema-form library](/forms/about-the-schema-and-uischema-objects#understanding-the-uischema-object) include string mappings. Widgets created specifically for VAFS do not have mappings, and therefore must be specified by passing the component for the widget directly to the config. To include such widgets, import the widget at the top of the file:
 
 ```js
 import CurrencyWidget from 'platform/forms-system/src/js/widgets/CurrencyWidget';
@@ -40,14 +40,14 @@ Available widgets are:
 
 ## `ArrayCountWidget`
 
-Renders a `<input type="number">` HTML element, and is used when determining how many times a group of questions should be rendered. For more information about grouping common questions, see "[Sequential duplicate form groups](/forms/available-features-and-usage-guidelines.md#sequential-duplicate-form-groups)."
+Renders a `<input type="number">` HTML element, and is used when determining how many times a group of questions should be rendered. For more information about grouping common questions, see "[Sequential duplicate form groups](/forms/available-features-and-usage-guidelines#sequential-duplicate-form-groups)."
 
 - **File:** [ArrayCountWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/ArrayCountWidget.jsx)
 - **Usage:** In the `uiSchema`, specify `'ui:widget': ArrayCountWidget` for the given field.
 
 ## `CheckboxWidget`
 
-Renders a single `<input type="checkbox">` HTML element. For information about rendering multiple checkboxes together, see "[Checkbox Group](/forms/available-features-and-usage-guidelines.md#checkbox-group)."
+Renders a single `<input type="checkbox">` HTML element. For information about rendering multiple checkboxes together, see "[Checkbox Group](/forms/available-features-and-usage-guidelines#checkbox-group)."
 
 - **File:** [CheckboxWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/CheckboxWidget.jsx)
 - **Usage:** Usually the `CheckboxWidget` is not specified directly in the `uiSchema` because it renders by default for a schema that specifies `type: 'boolean'`.
@@ -85,7 +85,7 @@ Renders a `TextWidget` with additional logic to strip non-numeric characters fro
 Renders a single radio button for each `enum` value. This overrides the default `SelectWidget` that is normally rendered where `enum` exists.
 
 - **File:** [RadioWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/RadioWidget.jsx)
-- **Usage:** In the `uiSchema`, specify `'ui:widget': 'radio'` for the given field. Usually used with `'ui:options': { labels: {}}` so you can specify the label for each radio button. To see a code example, refer to [radio button group in form features](/forms/available-features-and-usage-guidelines.md#radio-button-group).
+- **Usage:** In the `uiSchema`, specify `'ui:widget': 'radio'` for the given field. Usually used with `'ui:options': { labels: {}}` so you can specify the label for each radio button. To see a code example, refer to [radio button group in form features](/forms/available-features-and-usage-guidelines#radio-button-group).
 
 ## `SelectWidget`
 
