--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -7,7 +7,6 @@ tags: telephone, component
 import Telephone, { CONTACTS, PATTERNS } from './Telephone';
 
 ### Code:
-
 ```javascript
 import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/formation-react/ProgressBar'
 
@@ -15,7 +14,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 <Telephone contact={CONTACTS.VA_BENEFITS} />
 
 /* Renders as
-<a href="tel:+18008271000" aria-label="800. 8 2 7. 1000" class="no-wrap">
+<a href="tel:+18008271000" aria-label="800. 8 2 7. 1000." class="no-wrap">
   800-827-1000
 </a>
 */
@@ -23,18 +22,35 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 // Adding a pattern
 <Telephone
   contact={CONTACTS.VA_311}
-  pattern={PATTERNS.WRAP_CODE}
+  pattern={PATTERNS.OUTSIDE_US}
 />
 
 /* Renders as
-<a href="tel:+18446982311" aria-label="8 4 4. 6 9 8. 2 3 1 1" class="no-wrap">
-  (844) 698-2311
+<a href="tel:+18446982311" aria-label="1. 8 4 4. 6 9 8. 2 3 1 1." class="no-wrap">
+  +1-844-698-2311
+</a>
+*/
+
+// Adding an extension
+<Telephone
+  contact="8005551212"
+  extension="123"
+/>
+
+/* Renders as
+<a
+  href="tel:+18005551212;ext=123"
+  aria-label="800. 5 5 5. 1 2 1 2. extension 1 2 3."
+  class="no-wrap"
+>
+  800-555-1212, ext. 123
 </a>
 */
 
 // Showing all options
 <Telephone
   contact="18884424551" // leading "1" is removed
+  extension="555" // Ignored when ariaLabel or text is included
   className="foo"
   pattern={false} // Ignored when text is included
   ariaLabel="8 8 8. 4 4 2. 4 5 5 1"
@@ -44,7 +60,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 </Telephone>
 
 /* Renders as
-<a href="tel:+18884424551" aria-label="8 8 8. 4 4 2. 4 5 5 1" class="no-wrap foo">
+<a href="tel:+18884424551" aria-label="8 8 8. 4 4 2. 4 5 5 1." class="no-wrap foo">
   1-888-GI-BILL-1
 </a>
 */
@@ -62,7 +78,15 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
   <p>
     <Telephone
       contact={CONTACTS.VA_311}
-      pattern={PATTERNS.WRAP_CODE}
+      pattern={PATTERNS.OUTSIDE_US}
+    />
+  </p>
+
+  <strong>Adding an extension</strong>
+  <p>
+    <Telephone
+      contact="8005551212"
+      extension="
     />
   </p>
 
@@ -72,7 +96,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
       contact="18884424551"
       className="foo"
       pattern={false}
-      ariaLabel="8 8 8. 4 4 2. 4 5 5 1"
+      ariaLabel="1. 8 8 8. 4 4 2. 4 5 5 1"
       onClick={() => {}}
     >
       1-888-GI-BILL-1
@@ -108,4 +132,4 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 |:----|:--------|:------------|
 | `911` | `###` | Matches the `911` contact number |
 | `DEFAULT` | `###-###-####` | Current phone pattern used throughout the site |
-| `WRAP_AREACODE` | `(###) ###-####` | Extra pattern; currently used for testing |
+| `OUTSIDE_US` | `+1-###-###-####` | Use on pages for veterans outside the U.S. |
