--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -86,7 +86,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
   <p>
     <Telephone
       contact="8005551212"
-      extension="
+      extension="123"
     />
   </p>
 
