Fix docs & tests

--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -39,7 +39,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 
 /* Renders as
 <a
-  href="tel:+18005551212;ext=123"
+  href="tel:+18005551212,123"
   aria-label="800. 5 5 5. 1 2 1 2. extension 1 2 3."
   class="no-wrap"
 >
