--- a/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
@@ -9,7 +9,7 @@ In this doc, we'll walk through creating a new form and making some simple chang
 
 Prerequisites:
 - VA.gov [running locally](/getting-started)
-- [VA.gov Yeoman generator](/platform/generator) installed locally (first step in linked page)
+- [VA.gov Yeoman generator](/platform/tools/generator) installed locally (first step in linked page)
 
 If you both of those steps completed, you're ready to get started.
 
@@ -257,4 +257,4 @@ Once you've reviewed your form, you have to click the checkbox to agree to the p
 That's it! Continue on in our documentation to learn about building more complex forms and the whole process for building and submitting a new form.
 
 
-Next: [Intermediate tutorial](./form-tutorial-intermediate)
+Next: [Intermediate tutorial](/forms/form-tutorial-intermediate)
