Fix broken links

--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -5,7 +5,7 @@ tags: form validation, conditional fields, required fields, conditional pages,
 
 # Intermediate tutorial
 
-Previous: [Basic tutorial](./form-tutorial-basic)
+Previous: [Basic tutorial](/forms/form-tutorial-basic)
 
 Now that you've gone through and created a really simple form using the tutorial, let's take a look at how to handle some common use cases on forms.
 
@@ -334,7 +334,7 @@ If we had left off the `view:` prefix it would be:
 }
 ```
 
-That should get you started with some of the common validation and conditional field scenarios. Many of the options above have extra parameters or options that may help with some less common scenarios, so make sure to check the [form config specification](/forms/docs/spec) for a full picture of all the options offered.
+That should get you started with some of the common validation and conditional field scenarios. Many of the options above have extra parameters or options that may help with some less common scenarios, so make sure to check the [form config specification](/forms/config-options) for a full picture of all the options offered.
 
 
-Next: [Advanced tutorial](./form-tutorial-advanced)
+Next: [Advanced tutorial](/forms/form-tutorial-advanced)
