--- a/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
@@ -5,7 +5,7 @@ tags: common defintions, fullSchema
 
 # Advanced tutorial
 
-Previous: [Intermediate tutorial](./form-tutorial-intermediate)
+Previous: [Intermediate tutorial](/forms/form-tutorial-intermediate)
 
 ## Using Common Definitions
 
