--- a/packages/documentation/src/pages/forms/save-in-progress.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress.mdx
@@ -4,7 +4,7 @@ title: Setting up Save in Progress
 
 # Setting up Save in Progress
 
-Previous: [Advanced tutorial](./form-tutorial-advanced)
+Previous: [Advanced tutorial](/forms/form-tutorial-advanced)
 
 Forms on VA.gov support the ability to save them while in progress to a user's account and resume them later. Enabling Save in Progress requires
 
@@ -81,4 +81,4 @@ Once you've got all that set up, your form should appear on the profile page:
 
 ![](../../images/forms/saved_form.png)
 
-Next: [Forms in production](./forms/forms-in-production)
+Next: [Forms in production](/forms/forms-in-production)
