Fix example code

--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -8,7 +8,7 @@ import Telephone, { CONTACTS, PATTERNS } from './Telephone';
 
 ### Code:
 ```javascript
-import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/formation-react/ProgressBar'
+import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/formation-react/Telephone';
 
 // Minimal example
 <Telephone contact={CONTACTS.VA_BENEFITS} />
