Stop grouping aria-label numbers

--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -14,7 +14,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 <Telephone contact={CONTACTS.VA_BENEFITS} />
 
 /* Renders as
-<a href="tel:+18008271000" aria-label="800. 8 2 7. 1000." class="no-wrap">
+<a href="tel:+18008271000" aria-label="8 0 0. 8 2 7. 1 0 0 0." class="no-wrap">
   800-827-1000
 </a>
 */
@@ -40,7 +40,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 /* Renders as
 <a
   href="tel:+18005551212,123"
-  aria-label="800. 5 5 5. 1 2 1 2. extension 1 2 3."
+  aria-label="8 0 0. 5 5 5. 1 2 1 2. extension 1 2 3."
   class="no-wrap"
 >
   800-555-1212, ext. 123
