--- a/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
@@ -39,7 +39,8 @@ Mocha runs any *file_name*.unit.spec.js file located in the `/src` folder. This 
 
 Use the following conventions when writing a unit test.
 
-```
+```js
+import React from 'react';
 import { expect } from 'chai';
 import { shallow } from 'enzyme';
 import MyComponent from '../../components/MyComponent';
@@ -75,7 +76,7 @@ describe('my-application', () => {
 
 Use the following guidelines when writing a unit test for forms pages.
 
-```
+```js
 import { DefinitionTester } from 'platform/testing/unit/schemaform-utils';
 
 describe('MyForm FormID', () => {
