use "wrapper" variable name to match enzyme docs
https://enzymejs.github.io/enzyme/docs/api/shallow.html

--- a/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-unit-test.mdx
@@ -48,11 +48,11 @@ import MyComponent from '../../components/MyComponent';
 describe('my-application', () => {
   describe('MyComponent', () => {
     it('renders privacy act disclosure when state.show is true', () => {
-        const componentUnderTest = shallow(<MyComponent />);
+        const wrapper = shallow(<MyComponent />);
         ...
         expect(someCondition).to.be.true;
 
-        componentUnderTest.unmount();
+        wrapper.unmount();
     })
   });
 });
