--- a/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-application.mdx
@@ -68,7 +68,7 @@ Here are the steps for manually setting up a new application. We're going to wal
 import 'platform/polyfills';
 import './sass/my-new-application.scss';
 
-import startApp from '../../platform/startup';
+import startApp from 'platform/startup';
 
 import routes from './routes';
 import reducer from './reducers';
