--- a/packages/documentation/src/pages/getting-started/workflow/review.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/review.mdx
@@ -68,8 +68,8 @@ After a pull request is created, **Jenkins** will automatically **rebuild** thes
 
 **Jenkins** can be **manually triggered** to build a **review instance**.
 
-1. Visit http://jenkins.vetsgov-internal/job/vets-review-instance-deploy/ and log in.
-1. Select "Build with Parameters"
+1. Visit the [Jenkins Review Application Deploy job UI](http://jenkins.vfs.va.gov/job/deploys/job/vets-review-instance-deploy/) and log in.
+1. Select **Build with Parameters**
 1. Specify the branch names for `api_branch` and `web_branch`. These branches will be deployed together with the review instance.
 1. When the process is completed, the URL for the review instance will be provided at the end of the output logs.
 
