--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -113,6 +113,8 @@ Setting up the backend and internal tools allows local test account login and st
 
 - [**Backend (`vets-api`) set up** instructions](https://github.com/department-of-veterans-affairs/vets-api)
 
+  The local `vets-website` is configured to point to the `vets-api` backend at `http://localhost:3000`. Any website functionality that depends on the backend (i.e. login, save-in-progress, form submission, feature toggles) will require a locally running instance of `vets-api`.
+
 - [**Local test account login** instructions](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Administrative/Accessing-Staging.md)
 
 - [Internal tools setup instructions](internal-tools)
