--- a/packages/documentation/src/pages/platform/tools/generator.mdx
+++ b/packages/documentation/src/pages/platform/tools/generator.mdx
@@ -9,18 +9,9 @@ We have a Yeoman generator for starting up new React applications in vets-websit
 
 > You can find more information about creating forms in the [forms section](/forms).
 
-## Getting Started
-
-To install the generator, run the following:
-
-```bash
-$ npm install -g yo
-$ npm install -g @department-of-veterans-affairs/generator-vets-website
-```
-
 ## Usage
 
-Once you have the generator installed, navigate to the root of the vets-website repository and run:
+Navigate to the root of the vets-website repository and run:
 
 ```bash
 $ yarn new:app
